--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=8274aad6a10c5d438950becb7e399504
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://sauve5:User6365@cs287757-001.privatesql:35511/sauve5"
+DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
